--- a/.github/workflows/build-rootfs.yml
+++ b/.github/workflows/build-rootfs.yml
@@ -28,14 +28,20 @@ jobs:
           mount --bind /mnt/sys-root-skeleton /mnt/sys-root &&
           wget -O target-pacman.conf https://gitlab.archlinux.org/archlinux/archiso/-/raw/master/configs/releng/pacman.conf
       - name: Initialize rootfs
-        run: pacstrap -G -M -C target-pacman.conf -K /mnt/sys-root base curl wget vim nano sudo texinfo man-db man-pages
+        run: pacstrap -G -M -C target-pacman.conf -K /mnt/sys-root base base-devel curl wget vim sudo texinfo man-db man-pages
       - name: Configure
         run: |
           wget -O /mnt/sys-root/etc/pacman.d/mirrorlist https://archlinux.org/mirrorlist/all/ &&
-          sed -i -e 's/^#Server/Server/g' /mnt/sys-root/etc/pacman.d/mirrorlist &&
+          sed -i -e 's?^#Server = https://mirrors.tuna.tsinghua?Server = https://mirrors.tuna.tsinghua?g' /mnt/sys-root/etc/pacman.d/mirrorlist &&
           sed -i -e 's/^#Color/Color/g' -e 's/^#ParallelDownloads/ParallelDownloads/g' /mnt/sys-root/etc/pacman.conf &&
+          echo -e "\n\n[archlinuxcn]\nServer = https://mirrors.cernet.edu.cn/archlinuxcn/$arch" >> /mnt/sys-root/etc/pacman.conf &&
+          pacman-key --lsign-key "farseerfc@archlinux.org" &&
+          pacman -Syy archlinuxcn-keyring --noconfirm &&
+          pacman -Syyu --noconfirm &&
+          pacman -S yay zsh inetutils openbsd-netcat &&
           sed -i -e 's/^#en_US.UTF-8/en_US.UTF-8/g' /mnt/sys-root/etc/locale.gen &&
           echo "%wheel ALL=(ALL:ALL) ALL" > /mnt/sys-root/etc/sudoers.d/wheel &&
+          echo "%wheel ALL=(ALL:ALL) NOPASSWD: ALL" >> /mnt/sys-root/etc/sudoers.d/wheel &&
           arch-chroot /mnt/sys-root locale-gen &&
           rm /mnt/sys-root/etc/machine-id &&
           touch /mnt/sys-root/etc/machine-id &&
