--- a/.github/workflows/build-rootfs.yml
+++ b/.github/workflows/build-rootfs.yml
@@ -29,15 +29,23 @@ jobs:
           wget -O target-pacman.conf https://gitlab.archlinux.org/archlinux/archiso/-/raw/master/configs/releng/pacman.conf
       - name: Initialize rootfs
         run: pacstrap -G -M -C target-pacman.conf -K /mnt/sys-root base base-devel curl wget vim sudo texinfo man-db man-pages
-      - name: Configure
+      - name: Configure-1
         run: |
-          wget -O /mnt/sys-root/etc/pacman.d/mirrorlist https://archlinux.org/mirrorlist/?country=CN&protocol=https &&
-          sed -i -e 's?^#Server = https://mirrors.tuna.tsinghua?Server = https://mirrors.tuna.tsinghua?g' /mnt/sys-root/etc/pacman.d/mirrorlist &&
+          # wget -O /mnt/sys-root/etc/pacman.d/mirrorlist https://archlinux.org/mirrorlist/?country=CN&protocol=https &&
+          # sed -i -e 's?^#Server = https://mirrors.tuna.tsinghua?Server = https://mirrors.tuna.tsinghua?g' /mnt/sys-root/etc/pacman.d/mirrorlist &&
+          curl -s "https://archlinux.org/mirrorlist/?country=CN&protocol=https" | sed -e 's?^#Server = https://mirrors.tuna.tsinghua?Server = https://mirrors.tuna.tsinghua?g' | tee /mnt/sys-root/etc/pacman.d/mirrorlist &&
           sed -i -e 's/^#Color/Color/g' -e 's/^#ParallelDownloads/ParallelDownloads/g' /mnt/sys-root/etc/pacman.conf &&
           sed -i -e 's/^#en_US.UTF-8/en_US.UTF-8/g' /mnt/sys-root/etc/locale.gen &&
           echo "%wheel ALL=(ALL:ALL) ALL" > /mnt/sys-root/etc/sudoers.d/wheel &&
           echo "%wheel ALL=(ALL:ALL) NOPASSWD: ALL" >> /mnt/sys-root/etc/sudoers.d/wheel &&
-          arch-chroot /mnt/sys-root locale-gen &&
+          arch-chroot /mnt/sys-root locale-gen
+      - name: Configure-2
+        run: |
+          echo -e "\n\n[archlinuxcn]\nServer = https://mirrors.tuna.tsinghua.edu.cn/archlinuxcn/$arch" >> /mnt/sys-root/etc/pacman.conf &&
+          pacman-key --lsign-key "farseerfc@archlinux.org" &&
+          pacman -Sy archlinuxcn-keyring --noconfirm &&
+          pacman -Syyu --noconfirm &&
+          pacman -S yay zsh inetutils openbsd-netcat &&
           echo -e "[boot]\nsystemd = true\n\n[automount]\nenabled = true\noptions = \"metadata\"\nmountFsTab = true" > /mnt/sys-root/etc/wsl.conf &&
           rm /mnt/sys-root/etc/machine-id &&
           touch /mnt/sys-root/etc/machine-id &&
